[package]
name = "thxnet-leafchain"
build = "build.rs"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-literal = "0.3.4"
clap = { version = "4.1.8", features = ["derive"] }
tracing = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
jsonrpsee = { version = "0.22.0", features = ["server"] }

# Local
general-runtime = { path = "../runtime/general" }
pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
pallet-asset-tx-payment = { path = "../../../substrate/frame/transaction-payment/asset-tx-payment", default-features = false }

# Substrate
frame-benchmarking = { path = "../../../substrate/frame/benchmarking" }
frame-benchmarking-cli = { path = "../../../substrate/utils/frame/benchmarking-cli" }
pallet-transaction-payment-rpc = { path = "../../../substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "../../../substrate/client/basic-authorship" }
sc-chain-spec = { path = "../../../substrate/client/chain-spec" }
sc-cli = { path = "../../../substrate/client/cli" }
sc-client-api = { path = "../../../substrate/client/api" }
sc-consensus = { path = "../../../substrate/client/consensus/common" }
sc-executor = { path = "../../../substrate/client/executor" }
sc-network = { path = "../../../substrate/client/network" }
sc-network-sync = { path = "../../../substrate/client/network/sync" }
sc-rpc = { path = "../../../substrate/client/rpc" }
sc-service = { path = "../../../substrate/client/service" }
sc-sysinfo = { path = "../../../substrate/client/sysinfo" }
sc-telemetry = { path = "../../../substrate/client/telemetry" }
sc-tracing = { path = "../../../substrate/client/tracing" }
sc-transaction-pool = { path = "../../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-block-builder = { path = "../../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../../substrate/primitives/blockchain" }
sp-consensus-aura = { path = "../../../substrate/primitives/consensus/aura" }
sp-core = { path = "../../../substrate/primitives/core" }
sp-io = { path = "../../../substrate/primitives/io" }
sp-keystore = { path = "../../../substrate/primitives/keystore" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-timestamp = { path = "../../../substrate/primitives/timestamp" }
substrate-frame-rpc-system = { path = "../../../substrate/utils/frame/rpc/system" }
substrate-prometheus-endpoint = { path = "../../../substrate/utils/prometheus" }

# Polkadot
polkadot-cli = { path = "../../../polkadot/cli" }
polkadot-primitives = { path = "../../../polkadot/primitives" }
xcm = { package = "staging-xcm", path = "../../../polkadot/xcm", default-features = false }

# Polkadot (additional)
polkadot-overseer = { path = "../../../polkadot/node/overseer" }

# Cumulus
cumulus-client-cli = { path = "../../../cumulus/client/cli" }
cumulus-client-collator = { path = "../../../cumulus/client/collator" }
cumulus-client-consensus-aura = { path = "../../../cumulus/client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../../cumulus/client/consensus/common" }
cumulus-client-consensus-proposer = { path = "../../../cumulus/client/consensus/proposer" }
cumulus-client-service = { path = "../../../cumulus/client/service" }
cumulus-primitives-core = { path = "../../../cumulus/primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../../cumulus/primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../../../cumulus/client/relay-chain-interface" }

[build-dependencies]
substrate-build-script-utils = { path = "../../../substrate/utils/build-script-utils" }

[features]
default = []
runtime-benchmarks = [
    "general-runtime/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
]
try-runtime = [
    "general-runtime/try-runtime"
]
