[package]
name = "thxnet-leafchain"
build = "build.rs"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-literal = "0.3.4"
clap = { version = "4.1.8", features = ["derive"] }
tracing = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
jsonrpsee = { features = ["server"], workspace = true }

# Local
general-runtime = { path = "../runtime/general" }
pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
pallet-asset-tx-payment = { path = "../../../substrate/frame/transaction-payment/asset-tx-payment", default-features = false }
pallet-rwa-rpc = { path = "../pallets/rwa/rpc" }
pallet-rwa-runtime-api = { path = "../pallets/rwa/runtime-api" }
pallet-crowdfunding-rpc = { path = "../pallets/crowdfunding/rpc" }
pallet-crowdfunding-runtime-api = { path = "../pallets/crowdfunding/runtime-api" }

# Substrate
frame-benchmarking = { path = "../../../substrate/frame/benchmarking" }
frame-benchmarking-cli = { path = "../../../substrate/utils/frame/benchmarking-cli" }
pallet-transaction-payment-rpc = { path = "../../../substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "../../../substrate/client/basic-authorship" }
sc-chain-spec = { path = "../../../substrate/client/chain-spec" }
sc-cli = { path = "../../../substrate/client/cli" }
sc-client-api = { path = "../../../substrate/client/api" }
sc-consensus = { path = "../../../substrate/client/consensus/common" }
sc-executor = { path = "../../../substrate/client/executor" }
sc-network = { path = "../../../substrate/client/network" }
sc-network-sync = { path = "../../../substrate/client/network/sync" }
sc-rpc = { path = "../../../substrate/client/rpc" }
sc-service = { path = "../../../substrate/client/service" }
sc-sysinfo = { path = "../../../substrate/client/sysinfo" }
sc-telemetry = { path = "../../../substrate/client/telemetry" }
sc-tracing = { path = "../../../substrate/client/tracing" }
sc-transaction-pool = { path = "../../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-block-builder = { path = "../../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../../substrate/primitives/blockchain" }
sp-consensus-aura = { path = "../../../substrate/primitives/consensus/aura" }
sp-core = { path = "../../../substrate/primitives/core" }
sp-io = { path = "../../../substrate/primitives/io" }
sp-keystore = { path = "../../../substrate/primitives/keystore" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-timestamp = { path = "../../../substrate/primitives/timestamp" }
substrate-frame-rpc-system = { path = "../../../substrate/utils/frame/rpc/system" }
substrate-prometheus-endpoint = { path = "../../../substrate/utils/prometheus" }

# Polkadot
polkadot-cli = { path = "../../../polkadot/cli" }
polkadot-primitives = { path = "../../../polkadot/primitives" }
xcm = { package = "staging-xcm", path = "../../../polkadot/xcm", default-features = false }

# Polkadot (additional)
polkadot-overseer = { path = "../../../polkadot/node/overseer" }

# Cumulus
cumulus-client-cli = { path = "../../../cumulus/client/cli" }
cumulus-client-collator = { path = "../../../cumulus/client/collator" }
cumulus-client-consensus-aura = { path = "../../../cumulus/client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../../cumulus/client/consensus/common" }
cumulus-client-consensus-proposer = { path = "../../../cumulus/client/consensus/proposer" }
cumulus-client-service = { path = "../../../cumulus/client/service" }
cumulus-primitives-core = { path = "../../../cumulus/primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../../cumulus/primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../../../cumulus/client/relay-chain-interface" }

[build-dependencies]
substrate-build-script-utils = { path = "../../../substrate/utils/build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"general-runtime/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"general-runtime/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
