[package]
name = "pallet-dao"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "FRAME DAO pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
enumflags2 = { version = "0.7.7" }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }

frame-benchmarking = { path = "../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }

sp-arithmetic = { path = "../../../substrate/primitives/arithmetic", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }

pallet-balances = { path = "../../../substrate/frame/balances", default-features = false }
pallet-timestamp = { path = "../../../substrate/frame/timestamp", default-features = false }

simdutf8 = { version = "0.1", default-features = false }

[dev-dependencies]
sp-keystore = { path = "../../../substrate/primitives/keystore", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"enumflags2/std",
	"frame-benchmarking?/std",
	"log/std",
	"pallet-timestamp/std",
	"simdutf8/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-keystore/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime"
]
