[package]
name = "pallet-finality-rescue"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "FRAME pallet for emergency GRANDPA finality rescue"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }

frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }

sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }

pallet-grandpa = { path = "../../../substrate/frame/grandpa", default-features = false }

[dev-dependencies]
sp-core = { path = "../../../substrate/primitives/core" }
sp-io = { path = "../../../substrate/primitives/io" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-grandpa/std",
  "scale-info/std",
  "sp-runtime/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-grandpa/try-runtime",
  "sp-runtime/try-runtime",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
