[[bin]]
name = "thxnet-upgrade"
path = "src/main.rs"

[package]
name = "thxnet-upgrade"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "CLI tool for automating THXNet chain upgrades"

[dependencies]
# CLI
clap = { version = "4.4.2", features = ["derive", "env"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }

# RPC (must match monorepo lockfile — jsonrpsee 0.16.2)
jsonrpsee = { version = "0.16.2", features = ["ws-client", "macros"] }

# Substrate primitives (workspace path deps)
sp-core = { path = "../../../substrate/primitives/core" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-version = { path = "../../../substrate/primitives/version" }
sp-maybe-compressed-blob = { path = "../../../substrate/primitives/maybe-compressed-blob" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }

# WASM parsing
sc-executor-common = { path = "../../../substrate/client/executor/common" }

# Polkadot types
core-primitives = { package = "polkadot-core-primitives", path = "../../../polkadot/core-primitives" }

# Transaction pool types (for TransactionStatus)
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }

# Error handling + logging
thiserror = "1.0.48"
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Chrono for snapshot timestamps
chrono = { version = "0.4", features = ["serde"] }
