[package]
name = "polkadot-node-core-prospective-parachains"
version = "6.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "The Prospective Parachains subsystem. Tracks and handles prospective parachain fragments."

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = { workspace = true }
fatality = "0.1.1"

polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
assert_matches = "1"
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
sp-tracing = { path = "../../../../substrate/primitives/tracing" }
sp-core = { path = "../../../../substrate/primitives/core" }
rand = "0.8.5"
rstest = "0.18.2"
