[package]
name = "frame-omni-bencher"
version = "0.17.3"
description = "Freestanding benchmark runner for any Polkadot runtime."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
cumulus-primitives-proof-size-hostfunction.default-features = true
cumulus-primitives-proof-size-hostfunction.workspace = true
frame-benchmarking-cli.workspace = true
polkadot-jemalloc-shim.workspace = true
sc-cli.default-features = true
sc-cli.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
sp-statement-store.default-features = true
sp-statement-store.workspace = true
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
polkadot-jemalloc-shim = { workspace = true, features = ["jemalloc-allocator"] }

[dev-dependencies]
assert_cmd = { workspace = true }
cumulus-test-runtime = { workspace = true }
sc-chain-spec = { default-features = false, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
tempfile = { workspace = true }
