[package]
name = "pallet-crowdfunding"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }

frame-support = { path = "../../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../../substrate/frame/system", default-features = false }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false }
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true }

sp-io = { path = "../../../../substrate/primitives/io", default-features = false, optional = true }
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false, optional = true }
pallet-assets = { path = "../../../../substrate/frame/assets", default-features = false, optional = true }

pallet-rwa = { path = "../rwa", default-features = false }

[dev-dependencies]
sp-io = { path = "../../../../substrate/primitives/io" }
pallet-balances = { path = "../../../../substrate/frame/balances" }
pallet-assets = { path = "../../../../substrate/frame/assets" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "serde/std",
    "log/std",
    "frame-benchmarking?/std",
    "sp-io?/std",
    "pallet-balances?/std",
    "pallet-assets?/std",
    "pallet-rwa/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "sp-io",
    "pallet-balances",
    "pallet-balances/runtime-benchmarks",
    "pallet-assets",
    "pallet-assets/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
