[package]
name = "general-runtime"
build = "build.rs"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { path = "../../../../substrate/utils/wasm-builder" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Local
pallet-asset-tx-payment = { path = "../../../../substrate/frame/transaction-payment/asset-tx-payment", default-features = false }
pallet-assets = { path = "../../../../substrate/frame/assets", default-features = false }
pallet-multisig = { path = "../../../../substrate/frame/multisig", default-features = false }
pallet-nfts = { path = "../../../../substrate/frame/nfts", default-features = false }
pallet-nfts-runtime-api = { path = "../../../../substrate/frame/nfts/runtime-api", default-features = false }
pallet-proxy = { path = "../../../../substrate/frame/proxy", default-features = false }
pallet-utility = { path = "../../../../substrate/frame/utility", default-features = false }
pallet-identity = { path = "../../../../substrate/frame/identity", default-features = false }
pallet-message-queue = { path = "../../../../substrate/frame/message-queue", default-features = false }
pallet-treasury = { path = "../../../../substrate/frame/treasury", default-features = false }
pallet-trustless-agent = { path = "../../pallets/trustless-agent", default-features = false }
pallet-rwa = { path = "../../pallets/rwa", default-features = false }
pallet-rwa-runtime-api = { path = "../../pallets/rwa/runtime-api", default-features = false }
pallet-crowdfunding = { path = "../../pallets/crowdfunding", default-features = false }
pallet-crowdfunding-runtime-api = { path = "../../pallets/crowdfunding/runtime-api", default-features = false }

# Substrate
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-executive = { path = "../../../../substrate/frame/executive", default-features = false }
frame-support = { path = "../../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../../substrate/frame/system", default-features = false }
frame-system-benchmarking = { path = "../../../../substrate/frame/system/benchmarking", default-features = false, optional = true }
frame-system-rpc-runtime-api = { path = "../../../../substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { path = "../../../../substrate/frame/try-runtime", default-features = false, optional = true }
pallet-aura = { path = "../../../../substrate/frame/aura", default-features = false }
pallet-authorship = { path = "../../../../substrate/frame/authorship", default-features = false }
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false }
pallet-session = { path = "../../../../substrate/frame/session", default-features = false }
pallet-sudo = { path = "../../../../substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "../../../../substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "../../../../substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../../../../substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
sp-api = { path = "../../../../substrate/primitives/api", default-features = false }
sp-block-builder = { path = "../../../../substrate/primitives/block-builder", default-features = false }
sp-consensus-aura = { path = "../../../../substrate/primitives/consensus/aura", default-features = false }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false }
sp-genesis-builder = { path = "../../../../substrate/primitives/genesis-builder", default-features = false }
sp-inherents = { path = "../../../../substrate/primitives/inherents", default-features = false }
sp-offchain = { path = "../../../../substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
sp-session = { path = "../../../../substrate/primitives/session", default-features = false }
sp-io = { path = "../../../../substrate/primitives/io", default-features = false }
sp-std = { path = "../../../../substrate/primitives/std", default-features = false }
sp-transaction-pool = { path = "../../../../substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "../../../../substrate/primitives/version", default-features = false }

# Polkadot
pallet-xcm = { path = "../../../../polkadot/xcm/pallet-xcm", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", path = "../../../../polkadot/parachain", default-features = false }
polkadot-runtime-common = { path = "../../../../polkadot/runtime/common", default-features = false }
xcm = { package = "staging-xcm", path = "../../../../polkadot/xcm", default-features = false }
xcm-builder = { package = "staging-xcm-builder", path = "../../../../polkadot/xcm/xcm-builder", default-features = false }
xcm-executor = { package = "staging-xcm-executor", path = "../../../../polkadot/xcm/xcm-executor", default-features = false }

# Cumulus
cumulus-pallet-aura-ext = { path = "../../../../cumulus/pallets/aura-ext", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../../../cumulus/pallets/dmp-queue", default-features = false }
cumulus-pallet-parachain-system = { path = "../../../../cumulus/pallets/parachain-system", default-features = false }
cumulus-pallet-session-benchmarking = { path = "../../../../cumulus/pallets/session-benchmarking", default-features = false }
cumulus-pallet-xcm = { path = "../../../../cumulus/pallets/xcm", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../../../cumulus/pallets/xcmp-queue", default-features = false }
cumulus-primitives-core = { path = "../../../../cumulus/primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../../../cumulus/primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../../../cumulus/primitives/utility", default-features = false }
pallet-collator-selection = { path = "../../../../cumulus/pallets/collator-selection", default-features = false }
parachains-common = { path = "../../../../cumulus/parachains/common", default-features = false }
parachain-info = { package = "staging-parachain-info", path = "../../../../cumulus/parachains/pallets/parachain-info", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"log/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-crowdfunding-runtime-api/std",
	"pallet-crowdfunding/std",
	"pallet-identity/std",
	"pallet-message-queue/std",
	"pallet-multisig/std",
	"pallet-nfts-runtime-api/std",
	"pallet-nfts/std",
	"pallet-proxy/std",
	"pallet-rwa-runtime-api/std",
	"pallet-rwa/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-trustless-agent/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-dmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-crowdfunding/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-rwa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-trustless-agent/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-crowdfunding/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-rwa/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-trustless-agent/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]
